refactor(java): 优化控制器和异常处理代码结构
- 调整Java控制器类中的导入顺序，将Jakarta注解放在Spring注解之前
- 重构全局异常处理器，使用switch表达式替代冗长的if-else判断
- 简化Redis工具类中的包导入语句
- 移除不必要的空行和优化代码格式
- 统一Java服务实现类中的注解导入顺序
- 优化WebSocket上下文工具类中的集合操作
- 清理前端Vue组件中未使用的导入语句
- 规范前端JavaScript文件中的导入排序和代码格式
- 重构数据库模型文件中的异步操作逻辑
- 统一前后端项目中代码风格和导入规范